Fixed: comments were squished together on the right side due a missing width specification.

--- a/www/wp-content/themes/wireload-02/styles/main.scss
+++ b/www/wp-content/themes/wireload-02/styles/main.scss
@@ -1216,6 +1216,7 @@ body.quiet {
 }
 #nd-comments {
   float: right;
+  width: 590px;
   padding: 0px 16px 30px 317px;
 }
 .shadowed {
